Changelog for JErgometer
""""""""""""""""""""""""

//== 0.7.8 ==

2010-01-23
* [stefan]  * fixed some I18N issues

2010-01-22
* [stefan]  * several style changes (diagram, buttons)

== 0.7.7 ==

2010-01-19
* [stefan]  * simplified example programs (use relative values instead of absolute ones)
            * minor fixes
            * implemented issue #172: ensure that a user is selected

== 0.7.6 ==

2010-01-16
* [stefan]  * fixed problem that linux source package is still missing

== 0.7.5 ==

2010-01-16
* [stefan]  * implemented feature #164: allow relative values (with prefix "+") in training programs (for time, pulse and power)

== 0.7.4 ==

2010-01-16
* [stefan]  * implemented feature #171: create linux source package

2010-01-15
* [stefan]  * implemented issue #170: update check needs to be deactivated for linux packages

2010-01-10
* [stefan]  * done enhancement #156: replace buttons with nicer ones
            * fixed bug #169: exception is thrown when starting recording without selected program

== 0.7.3 ==

2009-12-22
* [stefan]  * implemented feature #157: add an update mechanism
            * solved issue #158: automate release process
                - version is automatically incremented
                - zip and tar.gz are automatically created
                - source code is automatically tagged in the svn repository
            * implemented feature #160: settings window should be closed when pressing escape
            * added DLLs for Windows i386 and amd64 and Mac OS X i386
                - this should be the first release that supports Mac
            * improved the start scripts (allows a restart of the program, checks OS and architecture)

== 0.7.2 ==

2009-11-28
* [stefan]  * fixed bug #153: "Edit" not available in program menu anymore

== 0.7.1 ==

2009-11-21
* [stefan]  * implemented feature #148: add "rename" menu entry to popup of program tree
            * fixed bug #149: JErgometer hangs when launched the editor